--- a/SNM/asset/src/index.html
+++ b/SNM/asset/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <script type="module">
       import {printNavBar, printMyPlaylists, printFollowedPlaylists, printTopCharts, 
-        verifySearch, printCardPlaceholder, printPublicPlaylists, checkAll, uncheckAllSwitch} from "./lib.js";
+        verifySearch, printCardPlaceholder, printPublicPlaylists, checkAll, uncheckAllSwitch} from "../lib.js";
       printNavBar("left_menu")
       for(let i=0;i<5;i++){
         printCardPlaceholder("top")
