--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="mb-3 form-check" style="margin-left:40px">
                             <input type="checkbox" class="form-check-input" id="changePassword">
-                            <label class="form-check-label" for="exampleCheck1">Spunta per cambiare la password</label>
+                            <label class="form-check-label" for="changePassword">Spunta per cambiare la password</label>
                         </div>
                         <div class="mb-3 form-check">
                             <li>
