--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -46,7 +46,7 @@
           </div>
           <div class="mb-3">
             <label class="form-label">
-                Generi preferiti : scegline almeno 3 per aiutarci a suggerirti canzoni
+                Generi preferiti : scegline almeno uno per aiutarci a suggerirti canzoni
             </label>
             <div class="container">
                 <div class="row" id="tagList" style="margin: 10px 0;">
