--- a/SNM/asset/src/index.html
+++ b/SNM/asset/src/index.html
@@ -74,6 +74,10 @@
           </div>
           <div id="content">
               <div>
+                <div id="searchDiv" class="container">
+                </div>
+              </div>
+              <div>
                 <h4>Playlist</h4>
                 <div class="container">
                   <div id="myPlaylists" class="row justify-content-center">
